rook-ceph/rook-ceph-mgr-dashboard-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: rook-ceph-mgr-node-port
  namespace: rook-ceph
spec:
  type: NodePort
  selector:
    app: rook-ceph-mgr
    ceph_daemon_id: a
    rook_cluster: rook-ceph
  ports:
  - name: http
    port: 7000
    targetPort: 7000
    nodePort: 30180
